--- a/index.html
+++ b/index.html
@@ -7,9 +7,16 @@
   <link rel="stylesheet" type="text/css" href="style.css" />
 </head>
 <body>
-  <div class="container">
-    <div class="col-sm-4 col-xs-12">
-      <table class="table table-striped table-bordered mains">
+  <div class="container col-md-6 col-sm-8">
+    <div class="col-xs-12 tabs">
+      <ul>
+        <li class="col-xs-4 tab active">Mains</li>
+        <li class="col-xs-4 tab">Optional</li>
+        <li class="col-xs-4 tab">Selected</li>
+      </ul>
+    </div>
+    <div class="col-sm-12 col-xs-12 tab-pane mains active">
+      <table class="table table-striped table-bordered">
         <thead>
           <tr>
             <th>Main Subjects</th>
@@ -17,25 +24,25 @@
         </thead>
         <tbody>
           <tr>
-            <td><label><input type="checkbox"/>Physics</label></td>
+            <td><label><input class="main-sub" type="checkbox"/>Physics</label></td>
           </tr>
           <tr>
-            <td><label><input type="checkbox"/>Maths</label></td>
+            <td><label><input class="main-sub" type="checkbox"/>Maths</label></td>
           </tr>
           <tr>
-            <td><label><input type="checkbox"/>Chemistry</label></td>
+            <td><label><input class="main-sub" type="checkbox"/>Chemistry</label></td>
           </tr>
           <tr>
-            <td><label><input type="checkbox"/>Biology</label></td>
+            <td><label><input class="main-sub" type="checkbox"/>Biology</label></td>
           </tr>
           <tr>
-            <td><label><input type="checkbox"/>English</label></td>
+            <td><label><input class="main-sub" type="checkbox"/>English</label></td>
           </tr>
         </tbody>
       </table>
     </div>
-    <div class="col-sm-4 col-xs-12">
-      <table class="table table-striped table-bordered optional">
+    <div class="col-sm-12 col-xs-12 tab-pane optional">
+      <table class="table table-striped table-bordered">
         <thead>
           <tr>
             <th>Optional Subjects</th>
@@ -43,22 +50,22 @@
         </thead>
         <tbody>
           <tr>
-            <td><label><input type="checkbox"/>Computer</label></td>
+            <td><label><input class="optional-sub" type="checkbox"/>Computer</label></td>
           </tr>
           <tr>
-            <td><label><input type="checkbox"/>Stats</label></td>
+            <td><label><input class="optional-sub" type="checkbox"/>Stats</label></td>
           </tr>
           <tr>
-            <td><label><input type="checkbox"/>Arts</label></td>
+            <td><label><input class="optional-sub" type="checkbox"/>Arts</label></td>
           </tr>
           <tr>
-            <td><label><input type="checkbox"/>Hindi</label></td>
+            <td><label><input class="optional-sub" type="checkbox"/>Hindi</label></td>
           </tr>
         </tbody>
       </table>
     </div>
-    <div class="col-sm-4 col-xs-12">
-      <table class="table table-striped table-bordered selected">
+    <div class="col-sm-12 col-xs-12 tab-pane selected">
+      <table class="table table-striped table-bordered">
         <thead>
           <tr>
             <th>Selected Subjects</th>
