tab orientation fix according to requirement

--- a/index.html
+++ b/index.html
@@ -10,59 +10,60 @@
   <div class="container col-md-6 col-sm-8">
     <div class="col-xs-12 tabs">
       <ul>
-        <li class="col-xs-4 tab active">Mains</li>
-        <li class="col-xs-4 tab">Optional</li>
-        <li class="col-xs-4 tab">Selected</li>
+        <li class="col-xs-6 tab active">Subjects</li>
+        <li class="col-xs-6 tab">Selected</li>
       </ul>
     </div>
-    <div class="col-sm-12 col-xs-12 tab-pane mains active">
-      <table class="table table-striped table-bordered">
-        <thead>
-          <tr>
-            <th>Main Subjects</th>
-          </tr>
-        </thead>
-        <tbody>
-          <tr>
-            <td><label><input class="main-sub" type="checkbox"/>Physics</label></td>
-          </tr>
-          <tr>
-            <td><label><input class="main-sub" type="checkbox"/>Maths</label></td>
-          </tr>
-          <tr>
-            <td><label><input class="main-sub" type="checkbox"/>Chemistry</label></td>
-          </tr>
-          <tr>
-            <td><label><input class="main-sub" type="checkbox"/>Biology</label></td>
-          </tr>
-          <tr>
-            <td><label><input class="main-sub" type="checkbox"/>English</label></td>
-          </tr>
-        </tbody>
-      </table>
-    </div>
-    <div class="col-sm-12 col-xs-12 tab-pane optional">
-      <table class="table table-striped table-bordered">
-        <thead>
-          <tr>
-            <th>Optional Subjects</th>
-          </tr>
-        </thead>
-        <tbody>
-          <tr>
-            <td><label><input class="optional-sub" type="checkbox"/>Computer</label></td>
-          </tr>
-          <tr>
-            <td><label><input class="optional-sub" type="checkbox"/>Stats</label></td>
-          </tr>
-          <tr>
-            <td><label><input class="optional-sub" type="checkbox"/>Arts</label></td>
-          </tr>
-          <tr>
-            <td><label><input class="optional-sub" type="checkbox"/>Hindi</label></td>
-          </tr>
-        </tbody>
-      </table>
+    <div class="col-sm-12 col-xs-12 tab-pane subjects active">
+      <div class="col-sm-6 col-xs-12 table-container mains">
+        <table class="table table-striped table-bordered">
+          <thead>
+            <tr>
+              <th>Main Subjects</th>
+            </tr>
+          </thead>
+          <tbody>
+            <tr>
+              <td><label><input class="main-sub" type="checkbox"/>Physics</label></td>
+            </tr>
+            <tr>
+              <td><label><input class="main-sub" type="checkbox"/>Maths</label></td>
+            </tr>
+            <tr>
+              <td><label><input class="main-sub" type="checkbox"/>Chemistry</label></td>
+            </tr>
+            <tr>
+              <td><label><input class="main-sub" type="checkbox"/>Biology</label></td>
+            </tr>
+            <tr>
+              <td><label><input class="main-sub" type="checkbox"/>English</label></td>
+            </tr>
+          </tbody>
+        </table>
+      </div>
+      <div class="col-sm-6 col-xs-12 table-container optional">
+        <table class="table table-striped table-bordered">
+          <thead>
+            <tr>
+              <th>Optional Subjects</th>
+            </tr>
+          </thead>
+          <tbody>
+            <tr>
+              <td><label><input class="optional-sub" type="checkbox"/>Computer</label></td>
+            </tr>
+            <tr>
+              <td><label><input class="optional-sub" type="checkbox"/>Stats</label></td>
+            </tr>
+            <tr>
+              <td><label><input class="optional-sub" type="checkbox"/>Arts</label></td>
+            </tr>
+            <tr>
+              <td><label><input class="optional-sub" type="checkbox"/>Hindi</label></td>
+            </tr>
+          </tbody>
+        </table>
+      </div>
     </div>
     <div class="col-sm-12 col-xs-12 tab-pane selected">
       <table class="table table-striped table-bordered">
