remove unnecessary class names

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
       </ul>
     </div>
     <div class="col-sm-12 col-xs-12 tab-pane subjects active">
-      <div class="col-sm-6 col-xs-12 table-container mains">
+      <div class="mains">
         <table class="table table-striped table-bordered">
           <thead>
             <tr>
@@ -41,7 +41,7 @@
           </tbody>
         </table>
       </div>
-      <div class="col-sm-6 col-xs-12 table-container optional">
+      <div class="optional">
         <table class="table table-striped table-bordered">
           <thead>
             <tr>
